--- a/ByteCloudSpigot/src/main/resources/plugin.yml
+++ b/ByteCloudSpigot/src/main/resources/plugin.yml
@@ -7,4 +7,4 @@ website: https://bytelist.de/
 main: de.bytelist.bytecloud.core.ByteCloudCore
 
 #load: STARTUP
-loadbefore: [GCGeneral, ClickAttack, Lobby, ShulkerDefence, JumpDuell, Survival, DeathRun]
+loadbefore: [GameChest, ClickAttack, Lobby, ShulkerDefence, JumpDuell, Survival, DeathRun]
