--- a/pom.xml
+++ b/pom.xml
@@ -29,5 +29,10 @@
             <version>1.16.12</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>4.1.12.Final</version>
+        </dependency>
     </dependencies>
 </project>
