--- a/Plugin-Bungee/pom.xml
+++ b/Plugin-Bungee/pom.xml
@@ -4,12 +4,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>bytecloud-parent</artifactId>
-        <groupId>de.bytelist</groupId>
+        <groupId>de.bytelist.bytecloud</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>ByteCloud-Bungee</artifactId>
+    <artifactId>Plugin-Bungee</artifactId>
 
     <repositories>
         <repository>
@@ -57,8 +57,8 @@
         <!--</dependency>-->
 
         <dependency>
-            <groupId>de.bytelist</groupId>
-            <artifactId>ByteCloud-Core</artifactId>
+            <groupId>de.bytelist.bytecloud</groupId>
+            <artifactId>Core</artifactId>
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
