--- a/Software/pom.xml
+++ b/Software/pom.xml
@@ -4,12 +4,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>bytecloud-parent</artifactId>
-        <groupId>de.bytelist</groupId>
+        <groupId>de.bytelist.bytecloud</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>ByteCloud-Software-2</artifactId>
+    <artifactId>Software</artifactId>
 
     <dependencies>
         <dependency>
@@ -20,8 +20,8 @@
         </dependency>
 
         <dependency>
-            <groupId>de.bytelist</groupId>
-            <artifactId>ByteCloud-Core</artifactId>
+            <groupId>de.bytelist.bytecloud</groupId>
+            <artifactId>Core</artifactId>
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
@@ -62,6 +62,35 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>net.md-5</groupId>
+                <artifactId>scriptus</artifactId>
+                <version>0.3.1</version>
+                <configuration>
+                    <format>git:${project.name}:${project.version}:%s:${build.number}</format>
+                </configuration>
+                <executions>
+                    <execution>
+                        <phase>initialize</phase>
+                        <goals>
+                            <goal>describe</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <mainClass>de.bytelist.bytecloud.bootstrap.Bootstrap</mainClass>
+                        </manifest>
+                    </archive>
+                </configuration>
             </plugin>
         </plugins>
     </build>
