--- a/Software/pom.xml
+++ b/Software/pom.xml
@@ -64,22 +64,22 @@
                 </executions>
             </plugin>
 
-            <plugin>
-                <groupId>net.md-5</groupId>
-                <artifactId>scriptus</artifactId>
-                <version>0.3.1</version>
-                <configuration>
-                    <format>git:${project.name}:${project.version}:%s:${build.number}</format>
-                </configuration>
-                <executions>
-                    <execution>
-                        <phase>initialize</phase>
-                        <goals>
-                            <goal>describe</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
+            <!--<plugin>-->
+                <!--<groupId>net.md-5</groupId>-->
+                <!--<artifactId>scriptus</artifactId>-->
+                <!--<version>0.3.1</version>-->
+                <!--<configuration>-->
+                    <!--<format>git:${project.name}:${project.version}:%s:${build.number}</format>-->
+                <!--</configuration>-->
+                <!--<executions>-->
+                    <!--<execution>-->
+                        <!--<phase>initialize</phase>-->
+                        <!--<goals>-->
+                            <!--<goal>describe</goal>-->
+                        <!--</goals>-->
+                    <!--</execution>-->
+                <!--</executions>-->
+            <!--</plugin>-->
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
