--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,9 @@
 
     <properties>
         <build.number>unknown</build.number>
-        <finalName>ByteCloud-${project.version}-${build.number}</finalName>
+        <build.version>v2-${project.version}-${build.number}</build.version>
+        <build.finalName>ByteCloud-${build.version}</build.finalName>
+
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
