--- a/Software/pom.xml
+++ b/Software/pom.xml
@@ -84,13 +84,15 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
                 <configuration>
+                    <finalName>${build.finalName}</finalName>
+
                     <archive>
                         <manifest>
                             <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                             <mainClass>de.bytelist.bytecloud.bootstrap.Bootstrap</mainClass>
                         </manifest>
                         <manifestEntries>
-                            <Implementation-Title>${build.finalName}</Implementation-Title>
+                            <Implementation-Title>${project.build.finalName}</Implementation-Title>
                             <Implementation-Version>${build.version}</Implementation-Version>
                         </manifestEntries>
                     </archive>
