--- a/Plugin-Bungee/pom.xml
+++ b/Plugin-Bungee/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>bytecloud-parent</artifactId>
         <groupId>de.bytelist.bytecloud</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>2.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -59,7 +59,7 @@
         <dependency>
             <groupId>de.bytelist.bytecloud</groupId>
             <artifactId>Core</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>2.0</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
