--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>de.bytelist.bytecloud</groupId>
     <artifactId>bytecloud-parent</artifactId>
     <packaging>pom</packaging>
-    <version>1.0-SNAPSHOT</version>
+    <version>2.0</version>
 
     <organization>
         <name>GameChest</name>
@@ -25,8 +25,8 @@
 
     <properties>
         <build.number>unknown</build.number>
-        <build.version>v2-${project.version}-${build.number}</build.version>
-        <build.finalName>${name}-${project.name}-${build.version}</build.finalName>
+        <build.version>${project.version}:${build.number}</build.version>
+        <build.finalName>ByteCloud-${project.name}-${build.version}</build.finalName>
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
