--- a/Plugin-Spigot/pom.xml
+++ b/Plugin-Spigot/pom.xml
@@ -42,7 +42,11 @@
         </dependency>
     </dependencies>
 
+    <packaging>jar</packaging>
+
     <build>
+        <finalName>${build.finalName}</finalName>
+
         <resources>
             <resource>
                 <directory>src/main/resources</directory>
@@ -52,7 +56,7 @@
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-copmiler-plugin</artifactId>
+                <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.6.1</version>
                 <configuration>
                     <source>1.8</source>
