--- a/Software/pom.xml
+++ b/Software/pom.xml
@@ -11,8 +11,6 @@
 
     <artifactId>Software</artifactId>
 
-    <name>ByteCloud-Software</name>
-
     <dependencies>
         <dependency>
             <groupId>jline</groupId>
@@ -28,7 +26,7 @@
             <scope>compile</scope>
         </dependency>
         <dependency>
-            <groupId>org.apache.commons</groupId>
+            <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
             <version>1.3.2</version>
             <scope>compile</scope>
@@ -49,7 +47,7 @@
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-copmiler-plugin</artifactId>
+                <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.6.1</version>
                 <configuration>
                     <source>1.8</source>
@@ -74,6 +72,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
+                <version>2.6</version>
                 <configuration>
                     <archive>
                         <manifest>
