--- a/pom.xml
+++ b/pom.xml
@@ -24,8 +24,8 @@
     </modules>
 
     <properties>
-        <buildNumber>unknown</buildNumber>
-        <build.version>${project.version}:${buildNumber}</build.version>
+        <build.number>unknown</build.number>
+        <build.version>${project.version}:${build.number}</build.version>
         <build.finalName>ByteCloud-${project.name}-${build.version}</build.finalName>
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
