--- a/Plugin-Spigot/pom.xml
+++ b/Plugin-Spigot/pom.xml
@@ -45,7 +45,7 @@
     <packaging>jar</packaging>
 
     <build>
-        <finalName>${build.finalName}</finalName>
+        <finalName>ByteCloud-${project.name}-${project.version}:${build.number}</finalName>
 
         <resources>
             <resource>
