--- a/Software/pom.xml
+++ b/Software/pom.xml
@@ -36,7 +36,7 @@
     <packaging>jar</packaging>
 
     <build>
-        <finalName>${build.finalName}</finalName>
+        <finalName>ByteCloud-${project.name}-${project.version}:${build.number}</finalName>
 
         <resources>
             <resource>
