--- a/ByteCloud-Core/pom.xml
+++ b/ByteCloud-Core/pom.xml
@@ -9,26 +9,25 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>Software</artifactId>
+    <artifactId>ByteCloud-Core</artifactId>
 
     <dependencies>
         <dependency>
-            <groupId>jline</groupId>
-            <artifactId>jline</artifactId>
-            <version>2.12.1</version>
-            <scope>compile</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>de.bytelist.bytecloud</groupId>
-            <artifactId>Core</artifactId>
-            <version>2.0</version>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongodb-driver</artifactId>
+            <version>3.5.0</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
-            <groupId>commons-io</groupId>
-            <artifactId>commons-io</artifactId>
-            <version>1.3.2</version>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.2.4</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>17.0</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
@@ -36,14 +35,6 @@
     <packaging>jar</packaging>
 
     <build>
-        <finalName>ByteCloud-${project.name}-${project.version}:${build.number}</finalName>
-
-        <resources>
-            <resource>
-                <directory>src/main/resources</directory>
-            </resource>
-        </resources>
-
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -67,24 +58,6 @@
                         </goals>
                     </execution>
                 </executions>
-            </plugin>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <version>2.6</version>
-                <configuration>
-                    <archive>
-                        <manifest>
-                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
-                            <mainClass>de.bytelist.bytecloud.bootstrap.Bootstrap</mainClass>
-                        </manifest>
-                        <manifestEntries>
-                            <Implementation-Title>${build.finalName}</Implementation-Title>
-                            <Implementation-Version>${build.version}</Implementation-Version>
-                        </manifestEntries>
-                    </archive>
-                </configuration>
             </plugin>
         </plugins>
     </build>
