--- a/ByteCloud-Plugin-Bungee/pom.xml
+++ b/ByteCloud-Plugin-Bungee/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>Plugin-Bungee</artifactId>
+    <artifactId>ByteCloud-Plugin-Bungee</artifactId>
 
     <repositories>
         <repository>
@@ -67,7 +67,7 @@
     <packaging>jar</packaging>
 
     <build>
-        <finalName>ByteCloud-${project.name}-${project.version}:${build.number}</finalName>
+        <finalName>${project.name}:${project.version}${build.number}</finalName>
 
         <resources>
             <resource>
