--- a/ByteCloud-Plugin-Bungee/pom.xml
+++ b/ByteCloud-Plugin-Bungee/pom.xml
@@ -67,7 +67,7 @@
     <packaging>jar</packaging>
 
     <build>
-        <finalName>${project.name}:${project.version}${build.number}</finalName>
+        <finalName>${project.name}:${project.version}-${build.number}</finalName>
 
         <resources>
             <resource>
