--- a/ByteCloud-Software/pom.xml
+++ b/ByteCloud-Software/pom.xml
@@ -36,7 +36,7 @@
     <packaging>jar</packaging>
 
     <build>
-        <finalName>${project.name}:${project.version}${build.number}</finalName>
+        <finalName>${project.name}:${project.version}-${build.number}</finalName>
 
         <resources>
             <resource>
