--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
 
     <properties>
         <build.number>unknown</build.number>
+        <git.commit>unknown</git.commit>
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
