--- a/ByteCloud-Plugin-Spigot/pom.xml
+++ b/ByteCloud-Plugin-Spigot/pom.xml
@@ -36,7 +36,7 @@
 
         <dependency>
             <groupId>de.bytelist.bytecloud</groupId>
-            <artifactId>Core</artifactId>
+            <artifactId>ByteCloud-Core</artifactId>
             <version>2.0</version>
             <scope>compile</scope>
         </dependency>
