--- a/ByteCloud-Software/pom.xml
+++ b/ByteCloud-Software/pom.xml
@@ -81,7 +81,7 @@
                         </manifest>
                         <manifestEntries>
                             <Implementation-Title>${project.name}-${project.version}-${build.number}:${git.commit}</Implementation-Title>
-                            <Implementation-Version>${project.version}-${build.number}:${git.commit}</Implementation-Version>
+                            <Implementation-Version>${project.version}.${build.number}:${git.commit}</Implementation-Version>
                         </manifestEntries>
                     </archive>
                 </configuration>
