--- a/ByteCloud-Plugin-Fallback/pom.xml
+++ b/ByteCloud-Plugin-Fallback/pom.xml
@@ -38,7 +38,7 @@
     <packaging>jar</packaging>
 
     <build>
-        <finalName>${project.name}-${project.version}-${build.number}:${git.commit}</finalName>
+        <finalName>${project.name}-${project.version}</finalName>
 
         <resources>
             <resource>
