Fixed file not found error in pom's

--- a/ByteCloud-Plugin-Bungee/pom.xml
+++ b/ByteCloud-Plugin-Bungee/pom.xml
@@ -119,7 +119,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <file>target/classes/bungee.yml</file>
+                    <file>${project.artifactId}/target/classes/bungee.yml</file>
                     <replacements>
                         <replacement>
                             <token>version: mvn:unknown</token>
