Added git to description.

--- a/ByteCloud-Plugin-Fallback/src/main/resources/plugin.yml
+++ b/ByteCloud-Plugin-Fallback/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
 name: ByteCloudFallback
 version: mvn:unknown
-author: §cByteList
-website: https://bytelist.de/
+#description
+author: ByteList
 
 main: de.bytelist.bytecloud.fallback.Fallback
