--- a/ByteCloud-Plugin-Fallback/pom.xml
+++ b/ByteCloud-Plugin-Fallback/pom.xml
@@ -104,7 +104,7 @@
                         </replacement>
                         <replacement>
                             <token>#description</token>
-                            <value>description: Git: ${git.commit}</value>
+                            <value>description: Git @ ${git.commit}</value>
                         </replacement>
                     </replacements>
                 </configuration>
