--- a/ByteCloud-Software/pom.xml
+++ b/ByteCloud-Software/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>bytecloud-parent</artifactId>
         <groupId>de.bytelist.bytecloud</groupId>
-        <version>2.0</version>
+        <version>2.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -22,7 +22,7 @@
         <dependency>
             <groupId>de.bytelist.bytecloud</groupId>
             <artifactId>ByteCloud-Core</artifactId>
-            <version>2.0</version>
+            <version>${parent.version}</version>
             <scope>compile</scope>
         </dependency>
 
