--- a/ByteCloud-Software/pom.xml
+++ b/ByteCloud-Software/pom.xml
@@ -39,6 +39,13 @@
             <version>1.3.2</version>
             <scope>compile</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-server</artifactId>
+            <version>9.4.12.v20180830</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <packaging>jar</packaging>
