--- a/ByteCloud-Software/pom.xml
+++ b/ByteCloud-Software/pom.xml
@@ -21,6 +21,13 @@
 
         <dependency>
             <groupId>de.bytelist.bytecloud</groupId>
+            <artifactId>ByteCloud-Common</artifactId>
+            <version>${parent.version}</version>
+            <scope>compile</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>de.bytelist.bytecloud</groupId>
             <artifactId>ByteCloud-Core</artifactId>
             <version>${parent.version}</version>
             <scope>compile</scope>
