--- a/ByteCloud-Plugin-Spigot/pom.xml
+++ b/ByteCloud-Plugin-Spigot/pom.xml
@@ -36,7 +36,7 @@
 
         <dependency>
             <groupId>de.bytelist.bytecloud</groupId>
-            <artifactId>ByteCloud-Common</artifactId>
+            <artifactId>common-spigot</artifactId>
             <version>${parent.version}</version>
             <scope>compile</scope>
         </dependency>
