do something with PacketLib

--- a/ByteCloud-Plugin-Bungee/pom.xml
+++ b/ByteCloud-Plugin-Bungee/pom.xml
@@ -56,6 +56,13 @@
             <version>${parent.version}</version>
             <scope>compile</scope>
         </dependency>
+
+        <dependency>
+            <groupId>de.bytelist.bytecloud</groupId>
+            <artifactId>ByteCloud-PacketClient</artifactId>
+            <version>${parent.version}</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <packaging>jar</packaging>
