--- a/ByteCloud-Plugin-Spigot/pom.xml
+++ b/ByteCloud-Plugin-Spigot/pom.xml
@@ -48,6 +48,13 @@
             <scope>compile</scope>
         </dependency>
 
+        <dependency>
+            <groupId>de.bytelist.bytecloud</groupId>
+            <artifactId>ByteCloud-PacketClient</artifactId>
+            <version>${parent.version}</version>
+            <scope>compile</scope>
+        </dependency>
+
     </dependencies>
 
     <packaging>jar</packaging>
