--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>ByteCloud-Software</module>
         <module>ByteCloud-Plugin-Bungee</module>
         <module>ByteCloud-Plugin-Spigot</module>
+        <module>ByteCloud-PacketClient</module>
     </modules>
 
     <repositories>
@@ -32,6 +33,10 @@
         <repository>
             <id>bungeecord-repo</id>
             <url>https://oss.sonatype.org/content/groups/public/</url>
+        </repository>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
         </repository>
     </repositories>
 
@@ -51,6 +56,14 @@
             <version>1.16.12</version>
             <scope>provided</scope>
         </dependency>
+
+        <dependency>
+            <groupId>com.github.Steveice10</groupId>
+            <artifactId>PacketLib</artifactId>
+            <version>1.3</version>
+            <scope>compile</scope>
+        </dependency>
+
     </dependencies>
 
     <distributionManagement>
