--- a/ByteCloud-Software/pom.xml
+++ b/ByteCloud-Software/pom.xml
@@ -21,7 +21,7 @@
 
         <dependency>
             <groupId>de.bytelist.bytecloud</groupId>
-            <artifactId>ByteCloud-Common</artifactId>
+            <artifactId>common-core</artifactId>
             <version>${parent.version}</version>
             <scope>compile</scope>
         </dependency>
